# ml_embedded

./: .gitignore  Presentation_EML_22-23.pptx  README.md  clear.sh  model_svm.csv  predict.sh  resetup.sh  setup.sh
Support-20221129/Python/: checkAuExtraction.py
archive/output/: output.csv
entrainement/: CMakeLists.txt
entrainement/creation_dataset/: creation_dataset.sh  main.cpp
entrainement/model/: SVM.ipynb  code.cpp  decisionTree.ipynb  model_svm.csv  randomForest.ipynb  reseauNeurone.ipynb  usefulCmdsAndFcns.py
entrainement/scripts/: DecisionTree.py  RandomForest.py  SVM.ipynb  SVM.py  decisionTree.ipynb  randomForest.ipynb  reseauNeurone.ipynb  reseauNeurone2.ipynb
entrainement/scripts/code_python/: DecisionTree.py  RandomForest.py  SVM.py  reseauNeurone.py
entrainement/src/: fft_utils.cpp  lecture.cpp
inference/DecisionTree/: codeDecisionTree.cpp  eval_decisionTree.cpp  makefile.sh  output  predict_decisionTree.cpp  test_dataset.h
inference/NeuronalNetwork/: evalNeuronalNetwork.cpp  evalNeuronalNetworkOptimize.cpp  makefile.sh  model.tflite  modelOptimize.tflite  test_dataset.h
inference/RandomForest/: codeRandomForest.cpp  eval_randomForest.cpp  makefile.sh  predict_randomForest.cpp  test_dataset.h
inference/SVC/: eval  eval_svc.cpp  makefile.sh  model_svm.csv  (+4 more)
model/: code.cpp  code.h  model_DecisionTreeClassifier_ml.csv  model_svm.csv
neuronalNetwork/: evalNeuronalNetwork.cpp  exe.sh  makefile  test_dataset.h
predict/: CMakeLists.txt
scripts/: DecisionTree.py  SVM.py  code.cpp  code.h  model_svm.csv  tets_code.cpp
src/: lecture.cpp
(+19 files in other folders)
